parser.output
Terminals which are not used

   ST_ELSEIF
   ST_FOR
   ST_EACH
   ST_TO
   ST_IN
   ST_NEXT
   ST_FUNCTION
   ST_EXIT
   ST_NOT
   ST_NULL
   ST_AMP
   ST_UNDERSCORE
   ST_SEMICOLON
   T_STRING
   T_FLOAT
   T_OTHER


Grammar

    0 $accept: program $end

    1 program: statements
    2        | ST_NEWLINE program

    3 statements: statement ST_NEWLINE
    4           | statement ST_NEWLINE statements

    5 statement: T_SYMBOL ST_EQ expr
    6          | ST_IF expr ST_THEN ST_NEWLINE statements ST_END ST_IF
    7          | ST_IF expr ST_THEN ST_NEWLINE statements ST_ELSE ST_NEWLINE statements ST_END ST_IF
    8          | ST_WHILE expr ST_NEWLINE statements ST_END ST_WHILE
    9          | ST_DIM definitions

   10 definitions: definition
   11            | definition ST_COMMA definitions

   12 definition: T_SYMBOL ST_AS type

   13 type: ST_INT
   14     | ST_FLOAT
   15     | ST_BOOL
   16     | ST_STRING

   17 expr: T_INT
   18     | ST_OPEN_PAREN subexpr ST_CLOSE_PAREN
   19     | subexpr

   20 subexpr: ST_PLUS expr
   21        | ST_MINUS expr
   22        | expr ST_PLUS expr
   23        | expr ST_MINUS expr
   24        | expr ST_STAR expr
   25        | expr ST_SLASH expr
   26        | expr ST_OR expr
   27        | expr ST_AND expr
   28        | expr ST_EQEQ expr
   29        | expr ST_NOT_EQ expr
   30        | expr ST_GREATER_EQ expr
   31        | expr ST_LESS_EQ expr
   32        | expr ST_GREATER expr
   33        | expr ST_LESS expr


Terminals, with rules where they appear

$end (0) 0
error (256)
ST_IF (258) 6 7
ST_THEN (259) 6 7
ST_ELSEIF (260)
ST_ELSE (261) 7
ST_END (262) 6 7 8
ST_FOR (263)
ST_EACH (264)
ST_TO (265)
ST_IN (266)
ST_NEXT (267)
ST_WHILE (268) 8
ST_FUNCTION (269)
ST_EXIT (270)
ST_DIM (271) 9
ST_AS (272) 12
ST_STRING (273) 16
ST_INT (274) 13
ST_FLOAT (275) 14
ST_BOOL (276) 15
ST_AND (277) 27
ST_OR (278) 26
ST_NOT (279)
ST_NULL (280)
ST_PLUS (281) 20 22
ST_MINUS (282) 21 23
ST_STAR (283) 24
ST_SLASH (284) 25
ST_EQ (285) 5
ST_EQEQ (286) 28
ST_NOT_EQ (287) 29
ST_LESS_EQ (288) 31
ST_GREATER_EQ (289) 30
ST_LESS (290) 33
ST_GREATER (291) 32
ST_OPEN_PAREN (292) 18
ST_CLOSE_PAREN (293) 18
ST_COMMA (294) 11
ST_AMP (295)
ST_UNDERSCORE (296)
ST_SEMICOLON (297)
ST_NEWLINE (298) 2 3 4 6 7 8
UNARY_MINUS (299)
UNARY_PLUS (300)
T_STRING (301)
T_SYMBOL (302) 5 12
T_INT (303) 17
T_FLOAT (304)
T_OTHER (305)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1 2, on right: 0 2
statements (53)
    on left: 3 4, on right: 1 4 6 7 8
statement (54)
    on left: 5 6 7 8 9, on right: 3 4
definitions (55)
    on left: 10 11, on right: 9 11
definition (56)
    on left: 12, on right: 10 11
type (57)
    on left: 13 14 15 16, on right: 12
expr (58)
    on left: 17 18 19, on right: 5 6 7 8 20 21 22 23 24 25 26 27 28
    29 30 31 32 33
subexpr (59)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33,
    on right: 18 19


state 0

    0 $accept: . program $end

    ST_IF       shift, and go to state 1
    ST_WHILE    shift, and go to state 2
    ST_DIM      shift, and go to state 3
    ST_NEWLINE  shift, and go to state 4
    T_SYMBOL    shift, and go to state 5

    program     go to state 6
    statements  go to state 7
    statement   go to state 8


state 1

    6 statement: ST_IF . expr ST_THEN ST_NEWLINE statements ST_END ST_IF
    7          | ST_IF . expr ST_THEN ST_NEWLINE statements ST_ELSE ST_NEWLINE statements ST_END ST_IF

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 13
    subexpr  go to state 14


state 2

    8 statement: ST_WHILE . expr ST_NEWLINE statements ST_END ST_WHILE

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 15
    subexpr  go to state 14


state 3

    9 statement: ST_DIM . definitions

    T_SYMBOL  shift, and go to state 16

    definitions  go to state 17
    definition   go to state 18


state 4

    2 program: ST_NEWLINE . program

    ST_IF       shift, and go to state 1
    ST_WHILE    shift, and go to state 2
    ST_DIM      shift, and go to state 3
    ST_NEWLINE  shift, and go to state 4
    T_SYMBOL    shift, and go to state 5

    program     go to state 19
    statements  go to state 7
    statement   go to state 8


state 5

    5 statement: T_SYMBOL . ST_EQ expr

    ST_EQ  shift, and go to state 20


state 6

    0 $accept: program . $end

    $end  shift, and go to state 21


state 7

    1 program: statements .

    $default  reduce using rule 1 (program)


state 8

    3 statements: statement . ST_NEWLINE
    4           | statement . ST_NEWLINE statements

    ST_NEWLINE  shift, and go to state 22


state 9

   20 subexpr: ST_PLUS . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 23
    subexpr  go to state 14


state 10

   21 subexpr: ST_MINUS . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 24
    subexpr  go to state 14


state 11

   18 expr: ST_OPEN_PAREN . subexpr ST_CLOSE_PAREN

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 25
    subexpr  go to state 26


state 12

   17 expr: T_INT .

    $default  reduce using rule 17 (expr)


state 13

    6 statement: ST_IF expr . ST_THEN ST_NEWLINE statements ST_END ST_IF
    7          | ST_IF expr . ST_THEN ST_NEWLINE statements ST_ELSE ST_NEWLINE statements ST_END ST_IF
   22 subexpr: expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    ST_THEN        shift, and go to state 27
    ST_AND         shift, and go to state 28
    ST_OR          shift, and go to state 29
    ST_PLUS        shift, and go to state 30
    ST_MINUS       shift, and go to state 31
    ST_STAR        shift, and go to state 32
    ST_SLASH       shift, and go to state 33
    ST_EQEQ        shift, and go to state 34
    ST_NOT_EQ      shift, and go to state 35
    ST_LESS_EQ     shift, and go to state 36
    ST_GREATER_EQ  shift, and go to state 37
    ST_LESS        shift, and go to state 38
    ST_GREATER     shift, and go to state 39


state 14

   19 expr: subexpr .

    $default  reduce using rule 19 (expr)


state 15

    8 statement: ST_WHILE expr . ST_NEWLINE statements ST_END ST_WHILE
   22 subexpr: expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    ST_AND         shift, and go to state 28
    ST_OR          shift, and go to state 29
    ST_PLUS        shift, and go to state 30
    ST_MINUS       shift, and go to state 31
    ST_STAR        shift, and go to state 32
    ST_SLASH       shift, and go to state 33
    ST_EQEQ        shift, and go to state 34
    ST_NOT_EQ      shift, and go to state 35
    ST_LESS_EQ     shift, and go to state 36
    ST_GREATER_EQ  shift, and go to state 37
    ST_LESS        shift, and go to state 38
    ST_GREATER     shift, and go to state 39
    ST_NEWLINE     shift, and go to state 40


state 16

   12 definition: T_SYMBOL . ST_AS type

    ST_AS  shift, and go to state 41


state 17

    9 statement: ST_DIM definitions .

    $default  reduce using rule 9 (statement)


state 18

   10 definitions: definition .
   11            | definition . ST_COMMA definitions

    ST_COMMA  shift, and go to state 42

    $default  reduce using rule 10 (definitions)


state 19

    2 program: ST_NEWLINE program .

    $default  reduce using rule 2 (program)


state 20

    5 statement: T_SYMBOL ST_EQ . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 43
    subexpr  go to state 14


state 21

    0 $accept: program $end .

    $default  accept


state 22

    3 statements: statement ST_NEWLINE .
    4           | statement ST_NEWLINE . statements

    ST_IF     shift, and go to state 1
    ST_WHILE  shift, and go to state 2
    ST_DIM    shift, and go to state 3
    T_SYMBOL  shift, and go to state 5

    $default  reduce using rule 3 (statements)

    statements  go to state 44
    statement   go to state 8


state 23

   20 subexpr: ST_PLUS expr .
   22        | expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    $default  reduce using rule 20 (subexpr)


state 24

   21 subexpr: ST_MINUS expr .
   22        | expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    $default  reduce using rule 21 (subexpr)


state 25

   22 subexpr: expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    ST_AND         shift, and go to state 28
    ST_OR          shift, and go to state 29
    ST_PLUS        shift, and go to state 30
    ST_MINUS       shift, and go to state 31
    ST_STAR        shift, and go to state 32
    ST_SLASH       shift, and go to state 33
    ST_EQEQ        shift, and go to state 34
    ST_NOT_EQ      shift, and go to state 35
    ST_LESS_EQ     shift, and go to state 36
    ST_GREATER_EQ  shift, and go to state 37
    ST_LESS        shift, and go to state 38
    ST_GREATER     shift, and go to state 39


state 26

   18 expr: ST_OPEN_PAREN subexpr . ST_CLOSE_PAREN
   19     | subexpr .

    ST_CLOSE_PAREN  shift, and go to state 45

    $default  reduce using rule 19 (expr)


state 27

    6 statement: ST_IF expr ST_THEN . ST_NEWLINE statements ST_END ST_IF
    7          | ST_IF expr ST_THEN . ST_NEWLINE statements ST_ELSE ST_NEWLINE statements ST_END ST_IF

    ST_NEWLINE  shift, and go to state 46


state 28

   27 subexpr: expr ST_AND . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 47
    subexpr  go to state 14


state 29

   26 subexpr: expr ST_OR . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 48
    subexpr  go to state 14


state 30

   22 subexpr: expr ST_PLUS . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 49
    subexpr  go to state 14


state 31

   23 subexpr: expr ST_MINUS . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 50
    subexpr  go to state 14


state 32

   24 subexpr: expr ST_STAR . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 51
    subexpr  go to state 14


state 33

   25 subexpr: expr ST_SLASH . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 52
    subexpr  go to state 14


state 34

   28 subexpr: expr ST_EQEQ . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 53
    subexpr  go to state 14


state 35

   29 subexpr: expr ST_NOT_EQ . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 54
    subexpr  go to state 14


state 36

   31 subexpr: expr ST_LESS_EQ . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 55
    subexpr  go to state 14


state 37

   30 subexpr: expr ST_GREATER_EQ . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 56
    subexpr  go to state 14


state 38

   33 subexpr: expr ST_LESS . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 57
    subexpr  go to state 14


state 39

   32 subexpr: expr ST_GREATER . expr

    ST_PLUS        shift, and go to state 9
    ST_MINUS       shift, and go to state 10
    ST_OPEN_PAREN  shift, and go to state 11
    T_INT          shift, and go to state 12

    expr     go to state 58
    subexpr  go to state 14


state 40

    8 statement: ST_WHILE expr ST_NEWLINE . statements ST_END ST_WHILE

    ST_IF     shift, and go to state 1
    ST_WHILE  shift, and go to state 2
    ST_DIM    shift, and go to state 3
    T_SYMBOL  shift, and go to state 5

    statements  go to state 59
    statement   go to state 8


state 41

   12 definition: T_SYMBOL ST_AS . type

    ST_STRING  shift, and go to state 60
    ST_INT     shift, and go to state 61
    ST_FLOAT   shift, and go to state 62
    ST_BOOL    shift, and go to state 63

    type  go to state 64


state 42

   11 definitions: definition ST_COMMA . definitions

    T_SYMBOL  shift, and go to state 16

    definitions  go to state 65
    definition   go to state 18


state 43

    5 statement: T_SYMBOL ST_EQ expr .
   22 subexpr: expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    ST_AND         shift, and go to state 28
    ST_OR          shift, and go to state 29
    ST_PLUS        shift, and go to state 30
    ST_MINUS       shift, and go to state 31
    ST_STAR        shift, and go to state 32
    ST_SLASH       shift, and go to state 33
    ST_EQEQ        shift, and go to state 34
    ST_NOT_EQ      shift, and go to state 35
    ST_LESS_EQ     shift, and go to state 36
    ST_GREATER_EQ  shift, and go to state 37
    ST_LESS        shift, and go to state 38
    ST_GREATER     shift, and go to state 39

    $default  reduce using rule 5 (statement)


state 44

    4 statements: statement ST_NEWLINE statements .

    $default  reduce using rule 4 (statements)


state 45

   18 expr: ST_OPEN_PAREN subexpr ST_CLOSE_PAREN .

    $default  reduce using rule 18 (expr)


state 46

    6 statement: ST_IF expr ST_THEN ST_NEWLINE . statements ST_END ST_IF
    7          | ST_IF expr ST_THEN ST_NEWLINE . statements ST_ELSE ST_NEWLINE statements ST_END ST_IF

    ST_IF     shift, and go to state 1
    ST_WHILE  shift, and go to state 2
    ST_DIM    shift, and go to state 3
    T_SYMBOL  shift, and go to state 5

    statements  go to state 66
    statement   go to state 8


state 47

   22 subexpr: expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   27        | expr ST_AND expr .
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    ST_PLUS        shift, and go to state 30
    ST_MINUS       shift, and go to state 31
    ST_STAR        shift, and go to state 32
    ST_SLASH       shift, and go to state 33
    ST_EQEQ        shift, and go to state 34
    ST_NOT_EQ      shift, and go to state 35
    ST_LESS_EQ     shift, and go to state 36
    ST_GREATER_EQ  shift, and go to state 37
    ST_LESS        shift, and go to state 38
    ST_GREATER     shift, and go to state 39

    $default  reduce using rule 27 (subexpr)


state 48

   22 subexpr: expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   26        | expr ST_OR expr .
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    ST_AND         shift, and go to state 28
    ST_PLUS        shift, and go to state 30
    ST_MINUS       shift, and go to state 31
    ST_STAR        shift, and go to state 32
    ST_SLASH       shift, and go to state 33
    ST_EQEQ        shift, and go to state 34
    ST_NOT_EQ      shift, and go to state 35
    ST_LESS_EQ     shift, and go to state 36
    ST_GREATER_EQ  shift, and go to state 37
    ST_LESS        shift, and go to state 38
    ST_GREATER     shift, and go to state 39

    $default  reduce using rule 26 (subexpr)


state 49

   22 subexpr: expr . ST_PLUS expr
   22        | expr ST_PLUS expr .
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    ST_STAR   shift, and go to state 32
    ST_SLASH  shift, and go to state 33

    $default  reduce using rule 22 (subexpr)


state 50

   22 subexpr: expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   23        | expr ST_MINUS expr .
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    ST_STAR   shift, and go to state 32
    ST_SLASH  shift, and go to state 33

    $default  reduce using rule 23 (subexpr)


state 51

   22 subexpr: expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   24        | expr ST_STAR expr .
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    $default  reduce using rule 24 (subexpr)


state 52

   22 subexpr: expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   25        | expr ST_SLASH expr .
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    $default  reduce using rule 25 (subexpr)


state 53

   22 subexpr: expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   28        | expr ST_EQEQ expr .
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    ST_PLUS        shift, and go to state 30
    ST_MINUS       shift, and go to state 31
    ST_STAR        shift, and go to state 32
    ST_SLASH       shift, and go to state 33
    ST_LESS_EQ     shift, and go to state 36
    ST_GREATER_EQ  shift, and go to state 37
    ST_LESS        shift, and go to state 38
    ST_GREATER     shift, and go to state 39

    $default  reduce using rule 28 (subexpr)


state 54

   22 subexpr: expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   29        | expr ST_NOT_EQ expr .
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    ST_PLUS        shift, and go to state 30
    ST_MINUS       shift, and go to state 31
    ST_STAR        shift, and go to state 32
    ST_SLASH       shift, and go to state 33
    ST_LESS_EQ     shift, and go to state 36
    ST_GREATER_EQ  shift, and go to state 37
    ST_LESS        shift, and go to state 38
    ST_GREATER     shift, and go to state 39

    $default  reduce using rule 29 (subexpr)


state 55

   22 subexpr: expr . ST_PLUS expr
   23        | expr . ST_MINUS expr
   24        | expr . ST_STAR expr
   25        | expr . ST_SLASH expr
   26        | expr . ST_OR expr
   27        | expr . ST_AND expr
   28        | expr . ST_EQEQ expr
   29        | expr . ST_NOT_EQ expr
   30        | expr . ST_GREATER_EQ expr
   31        | expr . ST_LESS_EQ expr
   31        | expr ST_LESS_EQ expr .
   32        | expr . ST_GREATER expr
   33        | expr . ST_LESS expr

    ST_PLUS   shift, and go to state 30
    ST_MINUS  shift, and go to state 31
    ST_STAR   shift, and go to state 32
    ST_SLASH  shift, and go to state 33

    $default  reduce using rule 31 (subexpr)


state 56
